# TestGen-AI

./: LICENSE.txt  README.md  compose.yaml
Backend/: .dockerignore  .env  .example.env  Dockerfile  pyproject.toml  requirements.txt
Backend/app/: celery_worker.py  database.py  main.py
Backend/app/agent/: code_analysis_agent.py  code_modify_agent.py  code_orchestrator.py  code_runner_agent.py  docker_agent.py  git_agent.py  root_agent.py
Backend/app/agent/my_agent/: agent.py
Backend/app/agent/tools/: get_current_time.py  get_weather.py
Backend/app/agent/tools/code/: execute_command.py  read_files.py  save_diff.py  update_db.py  write_files.py
Backend/app/agent/tools/docker/: run_container.py
Backend/app/agent/tools/git/: clone_repo.py  create_pull_request.py  generate_folder_structure.py
Backend/app/routes/: Jobs.py  analyze.py  auth.py
Backend/app/schemas/: user.py
Backend/app/tasks/: workflow.py
Frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.tsx  index.css
Frontend/src/components/: Cards.tsx  DiffViewer.tsx  Logo.tsx  Navbar.tsx  Navigation.tsx
Frontend/src/components/ui/: Button.tsx  CustomCheckbox.tsx  DatePicker.tsx  DropdownItem.tsx  DropdownMenu.tsx  Input.tsx  Modal.tsx  NothingYet.tsx  Select.tsx  Switch.tsx
Frontend/src/hooks/: useInput.tsx
Frontend/src/pages/: Auth.tsx  Homepage.tsx  Job.tsx  Jobs.tsx  NavbarLayout.tsx  NotFound.tsx  RootPage.tsx
Frontend/src/utils/: BackdropLoader.tsx  DiffParser.tsx  Fetch.tsx  FormValidation.tsx  FormatDate.tsx
